# COSPAIR

./: CMakeLists.txt  COSPAIR.cpp  COSPAIR.h  Evaluater.cpp  Evaluater.h  FeatureExtractor.cpp  FeatureExtractor.h  Matcher.cpp  Matcher.h  README.md  Reader.cpp  Reader.h  banana_1_1_1.pcd  main.cpp  myshapegenerator.cpp  myshapegenerator.h  pcd_list.txt  tez_visualise_compare.cpp  tez_visualiser.cpp  visualise_and_match.cpp
