cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(COSPAIR)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
find_package( OpenCV REQUIRED )
add_executable(COSPAIR FeatureExtractor.cpp Reader.h Reader.cpp Matcher.cpp Evaluater.cpp COSPAIR.cpp main.cpp )
target_link_libraries(COSPAIR ${OpenCV_LIBS} ${PCL_LIBRARIES}) 
